<resources>
    <string name="app_name">ESIEE Style</string>
    <string name="connexion">Connexion</string>
    <string name="user_mail">Mail ESIEE</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="inscription">S\'inscrire</string>
    <string name="mdp_forgot"><u>Mot de passe oublié</u></string>
    <string name="forgot_password">Mot de passe oublié</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="mail_esiee">Mail ESIEE</string>
    <string name="telephone">Téléphone</string>
    <string name="entrer">Entrer</string>
    <string name="retour">Retour</string>
    <string name="mon_compte">Mon compte</string>
    <string name="panier">Panier</string>
    <string name="ajouter">Ajouter</string>
    <string name="favoris">Favoris</string>
    <string name="menu">Menu</string>
    <string name="logo_esiee_style">logo ESIEE Style</string>
    <string name="titre_annonce">Titre de l\'annonce</string>
    <string name="categorie_objet">Catégorie de l\'objet</string>
    <string name="photo_objet">Photo de l\'objet</string>
    <string name="prix_objet">Prix de l\'objet</string>
    <string name="lieu_rencontre">Lieu de rencontre</string>
    <string name="informations_contact">Informations de contact (tel, mail…)</string>
    <string name="description_annonce">Description de l\'annonce</string>
    <string name="etat_objet">Etat de l\'objet</string>
    <string name="enter_email">Entrer votre email</string>
    <string name="reset_password">Réinitialiser le mot de passe</string>
    <string name="acheter">Acheter</string>

    <string name="vos_informations">Vos informations</string>
    <string name="mes_informations">Mes Informations</string>
    <string name="nom_prenom">Nom Prenom</string>
    <string name="nom_de_l_article">Nom de l\'article</string>
    <string name="informations">Information sur l\'article</string>
    <string name="nom_de_l_article">Nom de l\'article</string>
    <string name="informations">Informations</string>
    <string name="search">search</string>

    <string-array name="categories">
        <item>Vetements</item>
        <item>Electronique</item>
        <item>Gadget</item>
        <item>Soin</item>
    </string-array>

    <string-array name="lieu_rencontre">
        <item>Epi 1</item>
        <item>Epi 2</item>
        <item>Epi 3</item>
        <item>Epi 4</item>
        <item>Epi 5</item>
        <item>Epi 6</item>
        <item>Cafette</item>
        <item>Gymnase</item>
        <item>MD</item>
    </string-array>

    <string-array name="etat_objet">
        <item>Neuf</item>
        <item>Jamais utilisé</item>
        <item>Degrade</item>
        <item>Correct</item>
    </string-array>
</resources>