<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:src="@drawable/logo_esiee_style_sbg" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_margin="30dp"
        android:backgroundTint="@color/blue_background"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/inscription"
        android:textColor="@color/blue_text_1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/edit_round"
            android:hint="@string/nom"
            android:textColor="@color/blue_text_2"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/edit_round"
            android:hint="@string/prenom"
            android:textColor="@color/blue_text_2"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mail_esiee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/edit_round"
                        android:hint="@string/mail_esiee"
                        android:textColor="@color/blue_text_2"
                        android:inputType="textEmailAddress"
                        android:minHeight="50dp"
                        android:paddingStart="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:background="@drawable/edit_round"
                        android:hint="@string/telephone"
                        android:textColor="@color/blue_text_2"
                        android:inputType="phone"
                        android:minHeight="50dp"
                        android:paddingStart="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mot_de_passe"
            android:textColor="@color/blue_text_2"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:background="@drawable/edit_round"
            android:minHeight="50dp"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/validate_registration_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_round_button"
                android:textSize="18sp"
                android:text="@string/entrer"
                android:textColor="@color/grey"
                tools:ignore="VisualLintBounds" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/register_to_connection_page_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:minHeight="50dp"
        android:layout_below="@id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_round_button"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:text="@string/retour"
        tools:ignore="VisualLintBounds" />

</RelativeLayout>